fix: 二叉堆上浮下沉

--- a/算法与数据结构/算法题/03递归.html
+++ b/算法与数据结构/算法题/03递归.html
@@ -8,17 +8,21 @@
   </head>
   <body>
     <script>
-      // 时间复杂度  O(2^n)
-      // 1 1 2 3 5 8
-      // 1 2 3 4 5 6  求第n个值
-      function fun(n) {
-        if (n <= 2) {
-          return 1;
+      // 给定一个n,输出一个从n-1的数组，倒序
+      let arr = [];
+
+      function f(n) {
+        if (n < 1) {
+          return;
         }
-        return fun(n - 1) + fun(n - 2);
+        arr.push(n);
+        n--;
+        f(n);
+        console.log(n, "n");
       }
 
-      fun(3);
+      f(5);
+      console.log(arr, "arr");
     </script>
   </body>
 </html>
