fix: 二叉堆学习

--- a/算法与数据结构/二叉树/01创建一个二叉树.html
+++ b/算法与数据结构/二叉树/01创建一个二叉树.html
@@ -21,6 +21,7 @@
       n.right = new Node();
       let m = n.left;
       m.value = 44;
+      console.log(n, "n--");
     </script>
   </body>
 </html>
