--- a/算法与数据结构/排序/01冒泡排序2.html
+++ b/算法与数据结构/排序/01冒泡排序2.html
@@ -11,10 +11,13 @@
       var arr = [3, 44, 38, 5, 47, 15];
       function bubbleSort(arr) {
         var i = arr.length;
+        console.log(i, "i");
         while (i > 0) {
           var pos = 0;
+          // j < i 说明， i之后的值就不需要再进行排序了
           for (var j = 0; j < i; j++) {
             if (arr[j] > arr[j + 1]) {
+              // j记录最后一次交换的index ,j索引之后的值，说明已经排序好了
               pos = j;
               var temp = arr[j];
               arr[j] = arr[j + 1];
@@ -25,7 +28,7 @@
         }
         return arr;
       }
-      // 21,45,7,60,67,78
+      // 21,45,7,60,67,78   j=1  pos=1 i=1
       // 21,7,45,60,67,78
       // 7,21,45,60,67,78
       console.log(bubbleSort(arr));
