--- a/算法与数据结构/二叉堆/03二叉堆的下沉.html
+++ b/算法与数据结构/二叉堆/03二叉堆的下沉.html
@@ -8,24 +8,23 @@
   </head>
   <body>
     <script>
-      // 二叉堆下沉
+      //  下沉节点
       function downAdjust(arr, parentIndex, length) {
+        // temp保存父节点值，用于最后的赋值
         let temp = arr[parentIndex];
         let childIndex = 2 * parentIndex + 1;
-        //
         while (childIndex < length) {
-          // 如果存在右孩子，并且右孩子的值大于左孩子，则定位到右孩子
+          // 如果有右孩子，且右孩子小于左孩子，则定位到右孩子
           if (
             childIndex + 1 < length &&
-            arr[childIndex + 1] > arr[childIndex]
+            arr[childIndex + 1] < arr[childIndex]
           ) {
             childIndex++;
           }
-          // 如果父节点大于任何一个孩子的值，则直接跳出
-          if (temp >= arr[childIndex]) {
+          // 如果父节点小于任何一个孩子的值，则直接跳出
+          if (temp <= arr[childIndex]) {
             break;
           }
-          // 说明父节点小于其中一个孩子的值
           // 无须真正交换，单向赋值即可
           arr[parentIndex] = arr[childIndex];
           parentIndex = childIndex;
@@ -33,26 +32,15 @@
         }
         arr[parentIndex] = temp;
       }
+      // 构建堆
       function buildHeap(arr) {
-        // 将无序二叉堆构建成有有序二叉堆
+        // 获取所有非叶子节点，依次做‘下沉’调整
         for (let i = Math.floor((arr.length - 2) / 2); i >= 0; i--) {
           downAdjust(arr, i, arr.length);
         }
       }
-      const numberArr = [1, 12, 13, 44, 87, 62, 91, 65, 54, 45];
+      const numberArr = [1, 2, 34, 43, 65, 71, 29, 3, 56, 87, 32];
       buildHeap(numberArr);
-      console.log(numberArr, "numberArr");
-      console.log("最大堆实现一个从小到大的有序集合");
-      // 循环删除堆顶元素， 移动到集合尾部，调整堆产生新的堆顶
-      for (let i = numberArr.length - 1; i > 0; i--) {
-        console.log(i, "i");
-        // 最后1个元素和第1个元素进行交换
-        let temp = numberArr[i];
-        numberArr[i] = numberArr[0];
-        numberArr[0] = temp;
-        // 下沉调整为最大堆
-        downAdjust(numberArr, 0, i);
-      }
       console.log(numberArr, "numberArr");
     </script>
   </body>
