--- a/算法与数据结构/排序/04归并排序.html
+++ b/算法与数据结构/排序/04归并排序.html
@@ -30,10 +30,9 @@
       let arr2Index = 0;
 
       // 时间复杂度O（N+M）
-
+      // 合并两个有序数组
       while (arrIndex < arr.length && arr2Index < arr2.length) {
         if (arr[arrIndex] > arr2[arr2Index]) {
-          arr[10] > arr2[8];
           list3.push(arr2[arr2Index]);
           arr2Index++;
         } else {
