--- a/算法与数据结构/排序/06堆排序.html
+++ b/算法与数据结构/排序/06堆排序.html
@@ -51,6 +51,7 @@
         numberArr[i] = numberArr[0];
         numberArr[0] = temp;
         // 下沉调整为最大堆
+        console.log(numberArr, "numberArr");
         downAdjust(numberArr, 0, i);
       }
       console.log(numberArr, "numberArr");
